decal-macros/tests/ui/fail/bad_control_expr.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Block {
            if
        }
    };
}
